# gensdf

data/preprocessing/: CMakeLists.txt  sdf_gen.cpp  sdf_gen_from_pc.cpp
